[project]
name = "one-piece-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Pereria",email = "lpereira.qa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "one_piece_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
