[project]
name = "one-piece-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Pereira",email = "lpereira.qa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "one_piece_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 100
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
indent-style = "space"
preview = false
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = '-p no:warnings'

[tool.taskipy.tasks]
dev = 'poetry run fastapi dev src/one_piece_api/app.py'
lint = 'ruff check'
format = 'ruff format'
coverage = 'coverage html'
pre_test = 'task lint'
test = 'pytest -x --cov=src/one_piece_api -v'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"                           
